# Releases

## v0.5.0

## v0.4.0

* add cli tool #5

## v0.3.0

* support 24byte hash out and make null terminator optional (BC style) #3
* use OpenJDK Radix64 encoder implementation #2
* fix issue where string was created internally which cannot be wiped

## v0.2.0

* add String API
* refactor Version to be POJO (so caller can provide own impl)
* add BcryptFormtter
* add more tests

## v0.1.0

initial version