@@ -2,6 +2,8 @@
 
 ## v0.5.0
 
+* allow actual 2^31 rounds (fix integer overflow issue with `1<<31`) #7
+
 ## v0.4.0
 
 * add cli tool #5
